Fix scroll issue on mobile

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ html{
     scroll-behavior: smooth;
 }
 
+html.noscroll,
 .noscroll {
     overflow: hidden;
     height: 100vh;
